[gd_scene load_steps=11 format=3 uid="uid://cf8nk1apepjtd"]

[ext_resource type="Script" path="res://Scripts/button_script.gd" id="1_dklts"]
[ext_resource type="AudioStream" uid="uid://dov4mrx3rcxjr" path="res://Sounds/click_sound.mp3" id="2_jx8ms"]
[ext_resource type="AudioStream" uid="uid://bosoe6g4tbpyp" path="res://Sounds/hover_sound.mp3" id="3_b5sko"]
[ext_resource type="Script" path="res://Scenes/slider.gd" id="4_h7jhi"]
[ext_resource type="Script" path="res://Scenes/pitch_slider.gd" id="5_gvgg7"]
[ext_resource type="AudioStream" uid="uid://blbbv5g42bvf4" path="res://Sounds/chord1.mp3" id="6_bd0pc"]
[ext_resource type="AudioStream" uid="uid://b8cs6rth43sw0" path="res://Sounds/skullcrusher dnb.mp3" id="7_x5b3k"]
[ext_resource type="AudioStream" uid="uid://ddbecv1xe67m7" path="res://Sounds/break loop 1.mp3" id="8_50e5w"]

[sub_resource type="Gradient" id="Gradient_nbkld"]
colors = PackedColorArray(0.830655, 0.495535, 0.490945, 1, 1, 0.403922, 0.329412, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_lr1e3"]
gradient = SubResource("Gradient_nbkld")
width = 28
height = 28

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="."]
light_mask = 9
layout_mode = 2
offset_left = 24.0
offset_top = 24.0
offset_right = 134.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "Click me!"
text = "Impact
"
icon = SubResource("GradientTexture2D_lr1e3")
script = ExtResource("1_dklts")

[node name="click_audio" type="AudioStreamPlayer" parent="Button"]
stream = ExtResource("2_jx8ms")
volume_db = -20.0
bus = &"SFX"

[node name="hover_audio" type="AudioStreamPlayer" parent="Button"]
stream = ExtResource("3_b5sko")
volume_db = -3.748
pitch_scale = 2.04
bus = &"Hover_Sound"

[node name="volume_slider" type="HSlider" parent="Button"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = 30.0
offset_right = 55.0
offset_bottom = 46.0
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "Volume"
min_value = 1.0
max_value = 5.0
step = 0.001
value = 1.0
script = ExtResource("4_h7jhi")
bus_name = "SFX"

[node name="pitch_slider" type="HSlider" parent="Button"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = 54.0
offset_right = 55.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "Volume"
min_value = 0.5
max_value = 3.0
step = 0.001
value = 1.0
script = ExtResource("5_gvgg7")

[node name="loop_box" type="CheckBox" parent="Button"]
offset_left = -7.0
offset_top = 90.0
offset_right = 17.0
offset_bottom = 114.0
scale = Vector2(1.95196, 2.25538)

[node name="Button2" type="Button" parent="."]
light_mask = 9
layout_mode = 0
offset_left = 150.0
offset_top = 24.0
offset_right = 260.0
offset_bottom = 60.0
tooltip_text = "Click me!"
text = "Chord
"
icon = SubResource("GradientTexture2D_lr1e3")
script = ExtResource("1_dklts")

[node name="click_audio" type="AudioStreamPlayer" parent="Button2"]
stream = ExtResource("6_bd0pc")
volume_db = -20.0
pitch_scale = 0.58
bus = &"SFX"

[node name="hover_audio" type="AudioStreamPlayer" parent="Button2"]
stream = ExtResource("3_b5sko")
volume_db = -3.748
pitch_scale = 2.04
bus = &"Hover_Sound"

[node name="volume_slider" type="HSlider" parent="Button2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = 30.0
offset_right = 55.0
offset_bottom = 46.0
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "Volume"
min_value = 1.0
max_value = 5.0
step = 0.001
value = 1.0
script = ExtResource("4_h7jhi")
bus_name = "SFX"

[node name="pitch_slider" type="HSlider" parent="Button2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = 54.0
offset_right = 55.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "Volume"
max_value = 3.0
step = 0.001
value = 1.0
script = ExtResource("5_gvgg7")

[node name="loop_box" type="CheckBox" parent="Button2"]
offset_left = -7.0
offset_top = 90.0
offset_right = 17.0
offset_bottom = 114.0
scale = Vector2(1.95196, 2.25538)

[node name="Button3" type="Button" parent="."]
light_mask = 9
offset_left = 281.0
offset_top = 24.0
offset_right = 391.0
offset_bottom = 60.0
tooltip_text = "Click me!"
text = "Drum 1"
icon = SubResource("GradientTexture2D_lr1e3")
script = ExtResource("1_dklts")

[node name="click_audio" type="AudioStreamPlayer" parent="Button3"]
stream = ExtResource("7_x5b3k")
volume_db = -20.0
pitch_scale = 0.58
bus = &"SFX"

[node name="hover_audio" type="AudioStreamPlayer" parent="Button3"]
stream = ExtResource("3_b5sko")
volume_db = -3.748
pitch_scale = 2.04
bus = &"Hover_Sound"

[node name="volume_slider" type="HSlider" parent="Button3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = 30.0
offset_right = 55.0
offset_bottom = 46.0
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "Volume"
min_value = 1.0
max_value = 5.0
step = 0.001
value = 1.0
script = ExtResource("4_h7jhi")
bus_name = "SFX"

[node name="pitch_slider" type="HSlider" parent="Button3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = 54.0
offset_right = 55.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "Volume"
max_value = 3.0
step = 0.001
value = 1.0
script = ExtResource("5_gvgg7")

[node name="loop_box" type="CheckBox" parent="Button3"]
offset_left = -7.0
offset_top = 90.0
offset_right = 17.0
offset_bottom = 114.0
scale = Vector2(1.95196, 2.25538)

[node name="Button4" type="Button" parent="."]
light_mask = 9
offset_left = 412.0
offset_top = 24.0
offset_right = 522.0
offset_bottom = 60.0
tooltip_text = "Click me!"
text = "Drum 2
"
icon = SubResource("GradientTexture2D_lr1e3")
script = ExtResource("1_dklts")

[node name="click_audio" type="AudioStreamPlayer" parent="Button4"]
stream = ExtResource("8_50e5w")
volume_db = -20.0
pitch_scale = 0.58
bus = &"SFX"

[node name="hover_audio" type="AudioStreamPlayer" parent="Button4"]
stream = ExtResource("3_b5sko")
volume_db = -3.748
pitch_scale = 2.04
bus = &"Hover_Sound"

[node name="volume_slider" type="HSlider" parent="Button4"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = 30.0
offset_right = 55.0
offset_bottom = 46.0
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "Volume"
min_value = 1.0
max_value = 5.0
step = 0.001
value = 1.0
script = ExtResource("4_h7jhi")
bus_name = "SFX"

[node name="pitch_slider" type="HSlider" parent="Button4"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = 54.0
offset_right = 55.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "Volume"
max_value = 3.0
step = 0.001
value = 1.0
script = ExtResource("5_gvgg7")

[node name="loop_box" type="CheckBox" parent="Button4"]
offset_left = -7.0
offset_top = 90.0
offset_right = 17.0
offset_bottom = 114.0
scale = Vector2(1.95196, 2.25538)

[node name="CheckBox" type="CheckBox" parent="."]
modulate = Color(1, 0.227451, 0.278431, 1)
layout_mode = 0
offset_left = 24.0
offset_top = 433.0
offset_right = 48.0
offset_bottom = 457.0
scale = Vector2(2.7137, 2.83122)

[node name="TextEdit" type="TextEdit" parent="CheckBox"]
layout_mode = 0
offset_left = 21.2517
offset_top = 2.82911
offset_right = 127.252
offset_bottom = 40.8291
scale = Vector2(0.433293, 0.479444)
text = "Mute button"
editable = false
selecting_enabled = false

[node name="CheckBox2" type="CheckBox" parent="."]
layout_mode = 0
offset_left = 24.0001
offset_top = 549.0
offset_right = 48.0001
offset_bottom = 573.0
scale = Vector2(2.7137, 2.83122)

[node name="TextEdit" type="TextEdit" parent="CheckBox2"]
offset_left = 21.2517
offset_top = 2.82911
offset_right = 127.252
offset_bottom = 40.8291
scale = Vector2(0.433293, 0.479444)
text = "Chorus/Wet"
editable = false
selecting_enabled = false

[node name="CheckBox3" type="CheckBox" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 491.0
offset_right = 48.0
offset_bottom = 515.0
scale = Vector2(2.7137, 2.83122)

[node name="TextEdit" type="TextEdit" parent="CheckBox3"]
offset_left = 21.2517
offset_top = 2.82911
offset_right = 127.252
offset_bottom = 40.8291
scale = Vector2(0.433293, 0.479444)
text = "   Loop ALL"
editable = false
selecting_enabled = false

[connection signal="mouse_entered" from="Button" to="Button" method="_on_mouse_entered"]
[connection signal="pressed" from="Button" to="Button" method="_on_pressed"]
[connection signal="value_changed" from="Button/volume_slider" to="Button/volume_slider" method="_on_value_changed"]
[connection signal="value_changed" from="Button/pitch_slider" to="Button/pitch_slider" method="_on_value_changed"]
[connection signal="toggled" from="Button/loop_box" to="Button" method="_on_check_box_3_toggled"]
[connection signal="mouse_entered" from="Button2" to="Button2" method="_on_mouse_entered"]
[connection signal="pressed" from="Button2" to="Button2" method="_on_pressed"]
[connection signal="value_changed" from="Button2/volume_slider" to="Button2/volume_slider" method="_on_value_changed"]
[connection signal="value_changed" from="Button2/pitch_slider" to="Button2/pitch_slider" method="_on_value_changed"]
[connection signal="toggled" from="Button2/loop_box" to="Button2" method="_on_loop_box_toggled"]
[connection signal="mouse_entered" from="Button3" to="Button3" method="_on_mouse_entered"]
[connection signal="pressed" from="Button3" to="Button3" method="_on_pressed"]
[connection signal="value_changed" from="Button3/volume_slider" to="Button3/volume_slider" method="_on_value_changed"]
[connection signal="value_changed" from="Button3/pitch_slider" to="Button3/pitch_slider" method="_on_value_changed"]
[connection signal="toggled" from="Button3/loop_box" to="Button3" method="_on_loop_box_toggled"]
[connection signal="mouse_entered" from="Button4" to="Button4" method="_on_mouse_entered"]
[connection signal="pressed" from="Button4" to="Button4" method="_on_pressed"]
[connection signal="value_changed" from="Button4/volume_slider" to="Button4/volume_slider" method="_on_value_changed"]
[connection signal="value_changed" from="Button4/pitch_slider" to="Button4/pitch_slider" method="_on_value_changed"]
[connection signal="toggled" from="Button4/loop_box" to="Button4" method="_on_loop_box_toggled"]
[connection signal="mouse_entered" from="CheckBox" to="Button" method="_on_check_box_mouse_entered"]
[connection signal="toggled" from="CheckBox" to="Button" method="_on_check_box_toggled"]
[connection signal="toggled" from="CheckBox2" to="Button" method="_on_check_box_2_toggled"]
[connection signal="toggled" from="CheckBox3" to="Button" method="_on_check_box_3_toggled"]
[connection signal="toggled" from="CheckBox3" to="Button2" method="_on_check_box_3_toggled"]
[connection signal="toggled" from="CheckBox3" to="Button3" method="_on_check_box_3_toggled"]
